--- a/style.css
+++ b/style.css
@@ -28,3 +28,8 @@ section{
     border-radius: 5%;
     background-image: linear-gradient(orange tomato);
 }
+.dream-big{
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
